# robot_bridge

./: CMakeLists.txt  README.md  package.xml
config/: manipulator_controller.yaml
include/prbt_bridge/: prbt_bridge.h
include/prbt_cmd_controller/: prbt_cmd_controller.h
include/prbt_on_mpo/: prbt_on_mpo_bridge.h
include/robot_bridge/prbt/: prbt_Bridge.h
launch/: bridge.launch  prbt+mpo_bridge.launch  prbt_+_bridge.launch  prbt_cmd_controller.launch
launch/MPO_500/: mpo_500_bridge.launch
launch/PRBT6/: prbt_+_bridge.launch  prbt_bridge.launch
launch/UR/: ur10e.launch  ur10e_drivers.launch
src/mpo_500_bridge/: mpo_500_bridge.cpp  mpo_500_bridge_Node.cpp
src/prbt_bridge/: prbt_bridge.cpp  prbt_bridge_Node.cpp
src/prbt_cmd_controller/: prbt_cmd_controller.cpp  prbt_cmd_controller_Node.cpp
src/prbt_on_mpo/: prbt_on_mpo_bridge.cpp  prbt_on_mpo_bridge_Node.cpp
src/robot_bridge/: Robot_Bridge.cpp  Robot_Bridge_Node.cpp
src/robot_bridge/mpo_500/: mpo_500_Bridge.cpp  mpo_500_Bridge_Node.cpp
src/robot_bridge/prbt/: point_interpolation.m  prbt_Bridge.cpp  prbt_Bridge_Node.cpp
